<resources>
    <string name="app_name">ExampleTwo</string>
    <string name="action_settings">Settings</string>
    <string name="text_for_add_path">Add</string>
    <string name="add_path_of_your_image">Add path of your image</string>
    <string name="name_for_comment">Name</string>
    <string name="text_for_new_comment">Text</string>
    <string name="add_new_comment">ok</string>
    <string name="share">Share</string>
    <string name="zero">0</string>
</resources>
